expand grid. modelling with aggregated data

--- a/analyses.qmd
+++ b/analyses.qmd
@@ -34,25 +34,24 @@ Importing productivity index. See `productivity index.qmd`.
 productivityIndex <- readRDS("data/productivityIndex.RDS")
 
 Data <- Data %>%
-  left_join(productivityIndex, by=join_by(LocalityName))
+  left_join(productivityIndex, by=join_by(LocalityName)) |>
+  filter(
+    EngelskNavn != "Empty sample",
+    HeightClass >0,
+    Taxa != "0-Not Determined") %>%
+  mutate(
+    # add tree height in cm as the central value for each height category
+    height_cm = case_when(
+      HeightClass == 1 ~ 25,
+      HeightClass == 2 ~ 75,
+      HeightClass == 3 ~ 125,
+      HeightClass == 4 ~ 175,
+      HeightClass == 5 ~ 225,
+      HeightClass == 6 ~ 275,
+      HeightClass == 7 ~ 325)
+    )
 ```
 
-Gunnar: Fjern rader med quantity == null (0). 
-
-Jeg tror vi må legge til rader med nuller der en art ikke er registrert.
-Anders: fix.
-
-```{r}
-Data <- Data |>
-    complete(Region,
-             LocalityName,
-             LocalityCode,
-             Plot,
-             Treatment,
-             Year,
-             Taxa,
-             fill = list(Quantity = 0))
-```
 
 
 Subset rows (20) and columns (10)
@@ -63,7 +62,55 @@ DT::datatable(Data[1:20,1:10])
 
 ## Clean data
 
-...
+Obs - the Plot variable is used slightlu differently between sites (but consistently within sites)
+```{r}
+Data |>
+  count(Plot)
+
+
+sum(is.na(Data$Plot))
+```
+
+I will just conform these.
+
+```{r}
+Data <- Data |>
+  mutate(Plot = case_when(
+    Plot == "NW" ~ "OV",
+    Plot == "NE" ~ "OH",
+    Plot == "SW" ~ "NV",
+    Plot == "SE" ~ "NH",
+    .default = Plot
+  ))
+```
+
+```{r}
+Data |>
+  count(Plot)
+```
+
+Expanding the data set and adding rows for with quantity equal to zero for 
+cases where a taxa was not found. 
+Note that when I add a this zero, the height category and height_cm column
+is filled with NAs. 
+
+```{r}
+Data <- Data |>
+    complete( 
+      Taxa,
+        nesting(
+        Region,
+        LocalityName,
+        productivityIndex,
+        LocalityCode,
+        Plot,
+        Treatment,
+        Year
+        ),
+      fill = list(Quantity = 0)) 
+
+```
+
 
 ## Explore data
 
@@ -79,7 +126,6 @@ Three regions included: total of 34911 rows
 table(Data$Year, Data$Plot)
 ```
 
-Plot NW, NE, SW, SE referes to plot names in Hedmark-Akershus and corresponds to OV (NW), OH (NE), NV (SW), NH (SE) in the two other regions.
 
 ## Figures
 
@@ -751,7 +797,7 @@ One hypothesis is about the quantity of large trees above browsing height. Let's
 
 ```{r}
 birchData7 <- birchData %>%
-  filter(HeightClass ==7)
+  filter(HeightClass ==7 | is.na(HeightClass))
 ```
 
 ### Q1 - Stem density all species
@@ -838,7 +884,7 @@ qqline(resid(q1_lognorm))
 
 None are very good, but perhaps the gamma model was best?
 
-Are the residulas better if we look at the for the three regions seperately?
+Are the residulas better if we look at the for the three regions separately?
 
 ```{r}
 temp <- modelData %>%
@@ -856,7 +902,23 @@ Is the possion model overdispersed? If so, look into negative binomial.
 
 There are zeros in the data. Is that a mistake?
 
+We could try and aggregate the data first, before modelling.
+```{r}
+modelData2 <- modelData |>
+  group_by(Region, LocalityName, LocalityCode, Treatment, productivityIndex) |>
+  summarise(response = sum(Quantity))
+```
 
+Trying a log normal model on the aggregated data set
+```{r}
+q1_a2 <- lme4::lmer(data = modelData2,
+  log(response+1) ~ Treatment * productivityIndex + (1|Region))
+
+qqnorm(resid(q1_a2))
+qqline(resid(q1_a2))
+```
+
+Better. Perhaps a gamma or poisson model would be even better still. 
 
 ## Tables
 When (if) the model is done, here is how you can get a nice summary table.
